--- a/package.json
+++ b/package.json
@@ -1,47 +1,54 @@
 {
   "name": "angular4-nodejs",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "del-cli public/js/app && webpack --config webpack.config.dev.js --progress --profile --watch"
+    "build": "del-cli public/js/app && webpack --config webpack.config.dev.js --progress --profile --watch",
+      "build:prod": "del-cli public/js/app && ngc -p tsconfig.aot.json && ngc -p tsconfig.aot.json && webpack --config webpack.config.prod.js --progress --profile --bail && del-cli 'public/js/app/**/*.js' 'public/js/app/**/*.js.map' '!public/js/app/bundle.js' '!public/js/app/*.chunk.js' 'assets/app/**/*.ngfactory.ts' 'assets/app/**/*.shim.ts' 'assets/app/**/*.ngsummary.json' 'assets/app/**/*.ngstyle.ts'"
   },
-  "dependencies": {
-    "@angular/common": "v4.0.2",
-    "@angular/compiler": "v4.0.2",
-    "@angular/compiler-cli": "v4.0.2",
-    "@angular/core": "v4.0.2",
-    "@angular/forms": "v4.0.2",
-    "@angular/http": "v4.0.2",
-    "@angular/platform-browser": "v4.0.2",
-    "@angular/platform-browser-dynamic": "v4.0.2",
-    "@angular/router": "v4.0.2",
-    "@angular/upgrade": "v4.0.2",
-    "@angular/platform-server": "v4.0.2",
-    "body-parser": "~1.17.1",
+   "dependencies": {
+    "@angular/animations": "^4.0.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
+    "@angular/router": "^4.0.0",
+    "@angular/upgrade": "^4.0.0",
+    "bcryptjs": "^2.3.0",
+    "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
-    "core-js": "^2.4.1",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
+    "debug": "~2.2.0",
+    "express": "~4.14.0",
+    "hbs": "~3.1.0",
+    "jsonwebtoken": "^5.7.0",
+    "mongoose": "^4.4.12",
+    "mongoose-unique-validator": "^1.0.2",
+    "morgan": "~1.6.1",
     "reflect-metadata": "^0.1.3",
-    "hbs": "~4.0.1",
-    "morgan": "~1.8.1",
-    "rxjs": "^5.3.0",
-    "serve-favicon": "~2.4.2",
-    "zone.js": "^0.8.5"
+    "core-js": "^2.4.1",
+    "rxjs": "^5.2.0",
+    "zone.js": "^0.8.5",
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.41",
-    "@types/node": "^7.0.13",
-    "angular2-router-loader": "^0.3.5",
-    "angular2-template-loader": "^0.6.2",
+    "@ngtools/webpack": "^1.2.12",
+    "@types/core-js": "0.9.36",
+    "@types/node": "^6.0.45",
+    "angular-router-loader": "^0.5.0",
+    "angular2-template-loader": "^0.5.0",
     "awesome-typescript-loader": "^3.1.2",
-    "del-cli": "^0.2.1",
-    "html-loader": "^0.4.5",
-    "path": "^0.12.7",
+    "del-cli": "^0.2.0",
+    "html-loader": "^0.4.4",
     "raw-loader": "^0.5.1",
-    "typescript": "^2.2.2",
-    "webpack": "^2.4.1",
+    "ts-loader": "^2.0.3",
+    "typescript": "^2.1.4",
+    "webpack": "^2.2.1",
     "webpack-merge": "^4.1.0"
   }
 }
